--- a/README.rmd
+++ b/README.rmd
@@ -1,6 +1,6 @@
 ---
 title: "An R package to make climate stripe plots"
-output: md_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -32,13 +32,31 @@ temperature.vector[temperature.vector==999.9]=NA
 time.vector= stmargaretsbay$YEAR
 
 climate.col.stripes.f(time.vector= time.vector,temperature.vector= temperature.vector,
-  col1="blue", col2="red",
+  colour.vec=c("navyblue", "red"),
   title="Annual Average Temperature - St Margaret's Bay, NS, Canada",
   legend=T,
-  legend.text.col="white")
+  legend.text.col="yellow")
 ```
 
 This clearly shows a warming particularly since the early 1980s. There is a cooling from the mid 1990s to early 2000s and then the temperature increases in the second decade of the 2000s which includes the warmest years on record. The legend shows that the warmest year was 8.6 °C while the coldest was 4.1 °C. Years without data are shown without colour.
+
+This is not exactly the same as climate lab's plots who use a three colour gradient and they do not seem to use datasets with missing values or perhaps their missing data are colour coded with the average (white).  The climate lab climate stripes also tend to work on anomalies in which case a three colour gradient makes a lot of sense.
+
+![](README_files/figure-markdown_strict/uk-stripes-1.png){width=60%}
+
+From https://www.climate-lab-book.ac.uk/2018/climate-stripes-for-the-uk/
+
+You can make colour stripes plot closer to the look of those developed by climate lab using a multicolour  gradient. In the one below, "white" was added as the middle colour and different points along the gradients were marked with particular colours and this gives the light blues of the Climate Lab climate stripes. Experiment with different gradients and you may find something that works better for you. You could add as many colours as years even.
+
+```{r climatelabplot}
+climate.col.stripes.f(time.vector= time.vector,temperature.vector= temperature.vector,
+  colour.vec=c("navyblue","lightblue","white","red","darkred"),
+  title="Annual Average Temperature - St Margaret's Bay, NS, Canada",
+  legend=T,
+  legend.text.col="yellow")
+```
+
+This missing data in the 2012 period now look like average data though so it is deceptive. I personally prefer the two colour gradient on absolutes and not anomalies with missing data coded white. I think it is the most intuitive since anomalies are more difficult to explain to the lay public and it is easy to show missing data points.
 
 ## Make a climate stripe plot for just one month from the GISS dataset
 
@@ -47,7 +65,7 @@ temperature.vector= stmargaretsbay$SEP
 temperature.vector[temperature.vector==999.9]=NA
 time.vector= stmargaretsbay$YEAR
 climate.col.stripes.f(time.vector= time.vector,temperature.vector= temperature.vector,
-  col1="blue", col2="red",
+  colour.vec=c("navyblue", "red"),
   title="September Average Temperature - St Margaret's Bay, NS, Canada",
   legend=T,
   legend.text.col="white")
@@ -63,7 +81,7 @@ par(mfcol=c(6,2),mar=c(.2,.1,.5,.1))
 for (i in monthcols){
   temperature.vector= stmargaretsbay[,i]
   temperature.vector[temperature.vector==999.9]=NA
-  climate.col.stripes.f(time.vector= time.vector,temperature.vector, title=months[i-1], time.scale=F,legend.text.col="white")
+  climate.col.stripes.f(time.vector= time.vector,temperature.vector, colour.vec=c("navyblue","red"),title=months[i-1], time.scale=F)
 }
 ```
 
@@ -73,7 +91,6 @@ The axis has been omitted to bring out the general pattern and comparison betwee
 
 Climate Lab. 2018. https://www.climate-lab-book.ac.uk/2018/warming-stripes/
 
+Enfield, D.B., A.M. Mestas-Nunez, and P.J. Trimble, 2001: The Atlantic Multidecadal Oscillation and its relationship to rainfall and river flows in the continental U.S., Geophys. Res. Lett., 28: 2077-2080.
+
 GISTEMP Team, 2019: GISS Surface Temperature Analysis (GISTEMP), version 4. NASA Goddard Institute for Space Studies. Dataset accessed 2019-06-20 at https://data.giss.nasa.gov/gistemp/.
-
-Lenssen, N., G. Schmidt, J. Hansen, M. Menne,A. Persin,R. Ruedy, and D. Zyss, 2019: Improvements in the GISTEMP uncertainty model. J. Geophys. Res. Atmos. doi:10.1029/2018JD029522.
-
