--- a/README.rmd
+++ b/README.rmd
@@ -1,6 +1,6 @@
 ---
 title: "An R package to make climate stripe plots"
-output: html_document
+output: md_document
 ---
 
 ```{r setup, include=FALSE}
@@ -51,7 +51,7 @@ temperature.vector= stmargaretsbay$metANN
 temperature.vector[temperature.vector==999.9]=NA
 climate.col.stripes.f(time.vector= time.vector,temperature.vector= temperature.vector,
   colour.vec=c("navyblue","lightblue","white","red","darkred"),
-  title=title.name,
+  title="St Margaret's Bay, NS, Canada surface temperature annual mean (NASA GISS)",
   legend=T,
   text.col.legend="yellow")
 ```
